add packet definition

--- a/src/meson.build
+++ b/src/meson.build
@@ -2,12 +2,14 @@ boost_dep = dependency('boost', modules : ['exception'])
 g3logger_dep = dependency('g3logger', fallback: ['g3log', 'g3logger_dep'])
 
 i1i2i3_files = [
-	'main.cxx',
 	'error_info.cxx',
+	'internal/log_console_sink.cxx',
+	'main.cxx',
 	'network/socket.cxx',
 	'network/socket_connection.cxx',
-	'network/socket_exception.cxx',
-	'internal/log_console_sink.cxx',
+	'protocol/ippp.cxx',
+	'protocol/packet/packet.cxx',
+	'protocol/packet/packet_builder.cxx',
 ]
 
 vcs_rev = vcs_tag(input: 'version.hxx.in', output: 'version.hxx',
