fix build options wrong

--- a/misc/cimatrix.yaml
+++ b/misc/cimatrix.yaml
@@ -3,7 +3,7 @@ CXX:
   - clang++
 BUILD_OPTIONS:
   - -Dbuildtype=debug
-  - -Dbuildtype=release -Db_ndebug=true"
+  - -Dbuildtype=release -Db_ndebug=true
   - -Dbuildtype=release -Db_ndebug=true -Dunity=true
   - -Dbuildtype=release -Db_ndebug=true -Db_lto=true
 
