--- a/misc/cimatrix.yaml
+++ b/misc/cimatrix.yaml
@@ -6,7 +6,14 @@ BUILD_OPTIONS:
   - --buildtype=release -Db_ndebug=true
   - --buildtype=release -Db_ndebug=true --unity
   - --buildtype=release -Db_ndebug=true -Db_lto=true
+CXXFLAGS:
+  - -m64
+  - -m32
 
 exclude:
   - CXX: clang++
-    BUILD_OPTIONS: -Dbuildtype=release -Db_ndebug=true -Db_lto=true
+    BUILD_OPTIONS: --buildtype=release -Db_ndebug=true -Db_lto=true
+  - CXXFLAGS: -m32
+    BUILD_OPTIONS: --buildtype=release -Db_ndebug=true -Db_lto=true
+  - CXXFLAGS: -m32
+    BUILD_OPTIONS: --buildtype=release -Db_ndebug=true --unity
