Revert ":green_heart: add -m64/-m32 checker"
This reverts commit 3968a76df93d626e141f2aa1b30aa2c72191d8ab.
-m32 requires boost 32bit, but i don't want:-P

--- a/misc/cimatrix.yaml
+++ b/misc/cimatrix.yaml
@@ -6,14 +6,7 @@ BUILD_OPTIONS:
   - --buildtype=release -Db_ndebug=true
   - --buildtype=release -Db_ndebug=true --unity
   - --buildtype=release -Db_ndebug=true -Db_lto=true
-CXXFLAGS:
-  - -m64
-  - -m32
 
 exclude:
   - CXX: clang++
-    BUILD_OPTIONS: --buildtype=release -Db_ndebug=true -Db_lto=true
-  - CXXFLAGS: -m32
-    BUILD_OPTIONS: --buildtype=release -Db_ndebug=true -Db_lto=true
-  - CXXFLAGS: -m32
-    BUILD_OPTIONS: --buildtype=release -Db_ndebug=true --unity
+    BUILD_OPTIONS: -Dbuildtype=release -Db_ndebug=true -Db_lto=true
