move src/{ipp/,}main.cxx

--- a/src/ipp/meson.build
+++ b/src/ipp/meson.build
@@ -4,10 +4,9 @@ g3logger_dep = dependency('g3logger',
 	default_options: ['dynamic_logging=true']
 )
 
-i1i2i3_files = [
+libipphone_files = [
 	'error_info.cxx',
 	'logger/log_console_sink.cxx',
-	'main.cxx',
 	'network/socket.cxx',
 	'network/socket_address.cxx',
 	'network/socket_connection.cxx',
@@ -20,6 +19,11 @@ i1i2i3_files = [
 vcs_rev = vcs_tag(input: 'version.hxx.in', output: 'version.hxx',
 	fallback: meson.project_version())
 
-executable('main', [i1i2i3_files, vcs_rev],
+libipp = library('ipphone', [libipphone_files, vcs_rev],
+	dependencies: [boost_dep, g3logger_dep],
+	include_directories: include_directories(['..']))
+
+libipp_dep = declare_dependency(
+	link_with: libipp,
 	dependencies: [boost_dep, g3logger_dep],
 	include_directories: include_directories(['..']))
