--- a/src/meson.build
+++ b/src/meson.build
@@ -2,5 +2,6 @@ subdir('sox')
 subdir('ipp')
 
 executable('ippbin', 'ippbin.cxx',
-	dependencies: libipp_dep)
+	dependencies: libipp_dep,
+	cpp_args: project_warnings)
 executable('main', 'main.cxx')
