--- a/src/sox/meson.build
+++ b/src/sox/meson.build
@@ -6,7 +6,8 @@ sox_files = [
 
 libsoxcpp = library('soxcpp', sox_files,
 	dependencies: sox_dep,
-	include_directories: include_directories(['..']))
+	include_directories: include_directories(['..']),
+	cpp_args: project_warnings)
 libsoxcpp_dep = declare_dependency(
 	link_with: libsoxcpp,
 	include_directories: include_directories(['..']))
