:green_heart: ippbin requires version.hxx

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,7 +1,7 @@
 subdir('sox')
 subdir('ipp')
 
-executable('ippbin', 'ippbin.cxx',
+executable('ippbin', ['ippbin.cxx', vcs_rev],
 	dependencies: libipp_dep,
 	cpp_args: project_warnings)
 executable('main', 'main.cxx')
