:bug: throw away read/write wait

--- a/test/meson.build
+++ b/test/meson.build
@@ -4,7 +4,8 @@ gtest_mainsrc = gtest.get_variable('mainsources')
 gtest_inc = gtest.get_variable('incdir')
 
 test_sources = [
-	'ipp/util/buffer_test.cxx'
+	'ipp/util/buffer_test.cxx',
+	'ipp/util/buffer_test_mt.cxx',
 ]
 
 gtest_lib = static_library('gtest', [gtest_libsrc],
