--- a/src/meson.build
+++ b/src/meson.build
@@ -1,7 +1,13 @@
 subdir('sox')
 subdir('ipp')
 
-executable('ippbin', ['ippbin.cxx', vcs_rev],
-	dependencies: libipp_dep,
+main_src = [
+	'ippbin/terminal.cxx',
+	'ippbin/logger.cxx',
+]
+executable('ippbin', ['ippbin.cxx', main_src],
+	dependencies: [libipp_dep, ncurses_dep],
 	cpp_args: project_warnings)
-executable('main', 'main.cxx')
+executable('main', ['main.cxx', main_src],
+	dependencies: [libipp_dep, ncurses_dep],
+	cpp_args: project_warnings)
