--- a/meson.build
+++ b/meson.build
@@ -50,6 +50,7 @@ g3logger_dep = dependency('g3logger',
 libavcodec_dep = dependency('libavcodec')
 libavutil_dep = dependency('libavutil')
 ffmpeg_dep = declare_dependency(dependencies: [libavcodec_dep, libavutil_dep])
+libsixel_dep = dependency('libsixel')
 
 subdir('src')
 subdir('test')
