--- a/src/meson.build
+++ b/src/meson.build
@@ -1,3 +1,9 @@
+conf_data = configuration_data()
+has_send_packet = cpp_compiler.has_function('avcodec_send_packet',
+	dependencies: libavcodec_dep)
+conf_data.set('IPPBIN_HAVE_AVCODEC_SEND_PACKET', has_send_packet)
+conf_file = configure_file(output: 'config.h', configuration: conf_data)
+
 subdir('sox')
 subdir('ipp')
 
@@ -7,8 +13,10 @@ main_src = [
 	'ippbin/logger.cxx',
 	'ippbin/sixel_animation.cxx',
 	'ippbin/terminal.cxx',
+	conf_file,
 ]
-executable('ippbin', ['ippbin.cxx', main_src],
+
+executable('ippbin', ['ippbin.cxx'],
 	dependencies: [libipp_dep, ncurses_dep, libsixel_dep],
 	cpp_args: project_warnings)
 executable('main', ['main.cxx', main_src],
